Conserto do logo vpn

--- a/loginPage.html
+++ b/loginPage.html
@@ -113,7 +113,7 @@
     .button-submit {
       appearance: none;
       background-color: transparent;
-      border: 0.125em solid #2d79f3;
+      border: 0.125em solid white;
       border-radius: 10px;
       box-sizing: border-box;
       color: white;
@@ -326,7 +326,7 @@
       margin-left: 1px;
       margin-right: 1px;
       border-radius: 10px;
-      border-color: #2d79f3;
+      border-color: white;
       margin-top: 10px;
       width: 95%;
       background-color: transparent;
